@@ -11,16 +11,12 @@ include ../../config.mk
 	$(CXX) $(CXXFLAGS) $(CMDLINECPPFLAGS) $(COMPILE) $<
 
 all: $(SQLR)-query$(EXE) \
-	$(SQLR)-fields$(EXE) \
 	$(SQLR)sh$(EXE) \
 	$(SQLR)-export$(EXE) \
 	$(SQLR)-import$(EXE)
 
 clean:
-	$(LTCLEAN) $(RM) *.lo *.o *.obj $(SQLR)-fields$(EXE) $(SQLR)-query$(EXE) $(SQLR)-export$(EXE) $(SQLR)-import$(EXE) $(SQLR)sh$(EXE)
-
-$(SQLR)-fields$(EXE): sqlr-fields.cpp sqlr-fields.$(OBJ)
-	$(LTLINK) $(LINK) $(CXXFLAGS) $(LDFLAGS) $(OUT)$@ sqlr-fields.$(OBJ) $(CMDLINELIBS)
+	$(LTCLEAN) $(RM) *.lo *.o *.obj $(SQLR)-query$(EXE) $(SQLR)-export$(EXE) $(SQLR)-import$(EXE) $(SQLR)sh$(EXE)
 
 $(SQLR)-query$(EXE): sqlr-query.cpp sqlr-query.$(OBJ)
 	$(LTLINK) $(LINK) $(CXXFLAGS) $(LDFLAGS) $(OUT)$@ sqlr-query.$(OBJ) $(CMDLINELIBS)
@@ -36,22 +32,21 @@ $(SQLR)sh$(EXE): sqlrsh.cpp sqlrsh.$(OBJ)
 
 install:
 	$(MKINSTALLDIRS) $(bindir)
-	$(LTINSTALL) $(CP) $(SQLR)-fields$(EXE) $(bindir)
 	$(LTINSTALL) $(CP) $(SQLR)-query$(EXE) $(bindir)
 	$(LTINSTALL) $(CP) $(SQLR)-export$(EXE) $(bindir)
 	$(LTINSTALL) $(CP) $(SQLR)-import$(EXE) $(bindir)
 	$(LTINSTALL) $(CP) $(SQLR)sh$(EXE) $(bindir)
 
 uninstall:
-	$(RM) $(bindir)/$(SQLR)-fields$(EXE) \
-		$(bindir)/$(SQLR)-query$(EXE) \
-		$(bindir)/$(SQLR)-export$(EXE) \
+	$(RM) $(bindir)/$(SQLR)-export$(EXE) \
 		$(bindir)/$(SQLR)-import$(EXE) \
 		$(bindir)/$(SQLR)sh$(EXE) \
-		$(bindir)/sqlr-fields$(EXE) \
-		$(bindir)/sqlr-query$(EXE) \
 		$(bindir)/sqlr-export$(EXE) \
 		$(bindir)/sqlr-import$(EXE) \
 		$(bindir)/sqlrsh$(EXE) \
-		$(bindir)/query$(EXE) \
-		$(bindir)/fields$(EXE)
+		$(bindir)/$(SQLR)-fields$(EXE) \
+		$(bindir)/$(SQLR)-query$(EXE) \
+		$(bindir)/sqlr-query$(EXE) \
+		$(bindir)/sqlr-fields$(EXE) \
+		$(bindir)/fields$(EXE) \
+		$(bindir)/query$(EXE)
