@@ -1,16 +1,17 @@
 // Copyright (c) 1999-2016  David Muse
 // See the file COPYING for more information
 
-#define CONNECTION_OPTIONS \
+#define CONNECTIONOPTIONS \
 "Connection options:\n" \
-"	-host host		SQL Relay server host\n" \
-"	-port port		SQL Relay server port\n" \
-"	-socket socket		SQL Relay server local unix socket\n" \
-"	-user user		SQL Relay server user name\n" \
-"	-password password	SQL Relay server password\n" \
+"	-host host		server host name or IP address\n" \
+"	-port port		server port\n" \
+"	-socket socket		server local unix socket file name\n" \
+"	-user user		user name\n" \
+"	-password password	password\n" \
 "\n" \
 "Alternate connection options:\n" \
-"	-config config		SQL Relay config file\n" \
-"	-id instanceid		id of instance in the config file\n"
+"	-config config		config file\n" \
+"	-id instanceid		id of an instance in the config file from which\n" \
+"				to derive connection info and credentials\n"
 
-#define BUGS "Report bugs to <david.muse@firstworks.com>\n"
+#define REPORTBUGS "Report bugs to <david.muse@firstworks.com>\n"
